@@ -7,6 +7,7 @@ Bug fixes:
 - #6914 Fix for Qt Word Wrap on Mac
 - #6920 Windows Installer checksums
 - #6921 Handling pre-main window creation status notifications
+- #6922 macOS CI build
 
 Enhancements:
 - #6912 Removes UI for Screen Saver Sync and Files Drag and Drop
